# claude-config

./: .claude-config-baseline.json  .claude.enhanced.json  .gitignore  CLAUDE.enhanced.md  CLAUDE.md  CONTENT_ENHANCEMENT_STRATEGY.md  DEVELOPMENT_PLAN.md  ENHANCEMENTS.md  GLOBAL-SYSTEM-SUMMARY.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  INTEGRATION_STRATEGY.md  Makefile  PARALLEL_EXECUTION_SUMMARY.md  PHASE_2D_COMPLETION_SUMMARY.md  README-global-build-system.md  README.md  agent-analysis-report.md  pyproject.toml  pytest.ini
.claude-config-metrics/: build-performance.json
.github/workflows/: quality-gates.yml  stream-c-validation.yml
agents/: .gitignore  agent-architect.md  ai-engineer.md  ai-researcher.md  blockchain-engineer.md  data-engineer.md  database-engineer.md  devops-engineer.md  frontend-engineer.md  git-helper.md  java-engineer.md  product-manager.md  prompt-engineer.md  python-engineer.md  qa-engineer.md  quant-analyst.md  security-engineer.md  sr-ai-researcher.md  sr-architect.md  sr-quant-analyst.md  technical-writer.md
data/: config.yaml
data/personas/: agent-architect.yaml  ai-engineer.yaml  (+44 more)
docs/: AGENT_CREATION_GUIDE.md  ARCHIVE_critical-agent-fixes-summary.md  ARCHIVE_parallel-agent-enhancement-tasks.md  ARCHIVE_parallel-execution-summary.md  ARCHIVE_subagent-definition-assessment.md  ENHANCEMENT_INSTRUCTIONS.md  README.md  agent-enhancement-progress-report.md  api-reference.md  claude-supplement.md  examples.md  external-knowledge-integration-strategy.md  global-build-system.md  performance-guide.md  subagent-architecture-overview.md  subagent-creation-guide.md  troubleshooting.md
examples/: example_CLAUDE.md  external_knowledge_usage_example.py  generate_claude_md_demo.py  validate_coordination_example.py
scripts/: consolidate_content.py  run_quality_validation.py
src/: build_composer_global.py  build_consolidated_global.py  build_simple_global.py  build_trait_aware_global.py  global_config_builder.py
templates/: agent-with-global-references.md  global-claude.json  global-claude.md
tests/: README.md  __init__.py  test_build_system.py  test_cli.py  test_cli_enhanced.py  test_cli_integration.py  test_cli_orchestration.py  test_composer.py  test_content_pipelines.py  test_coordination_validator.py  test_cross_agent_integration.py  test_enhanced_validation.py  test_error_scenarios.py  test_external_knowledge_integration.py  test_integration.py  test_performance.py  test_security_validation.py  test_validator.py
(+270 files in other folders)
